compiscript/program/tac/generated/TacParser.py
# Generated from Tac.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class TacParser ( Parser ):

    grammarFileName = "Tac.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'('", "')'", "':'", "':='", 
                     "','", "'branch'", "'jump'", "'call'", "'return'", 
                     "'array_new'", "'array_store'", "'array_index'", "'array_length'", 
                     "'field_load'", "'field_store'", "'print'", "'begin_try'", 
                     "'end_try'", "'begin_catch'", "'end_catch'", "'true'", 
                     "'false'", "'null'", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'&&'", "'||'", "'lt'", "'gt'", "'le'", "'ge'", "'eq'", 
                     "'ne'", "'add'", "'sub'", "'mul'", "'div'", "'mod'", 
                     "'and'", "'or'", "'neg'", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Identifier", "IntegerLiteral", "StringLiteral", 
                      "COMMENT", "WS" ]

    RULE_program = 0
    RULE_functionDecl = 1
    RULE_block = 2
    RULE_label = 3
    RULE_instruction = 4
    RULE_assignInstr = 5
    RULE_binaryInstr = 6
    RULE_unaryInstr = 7
    RULE_branchInstr = 8
    RULE_jumpInstr = 9
    RULE_callInstr = 10
    RULE_returnInstr = 11
    RULE_arrayInstr = 12
    RULE_fieldInstr = 13
    RULE_printInstr = 14
    RULE_tryInstr = 15
    RULE_paramList = 16
    RULE_argList = 17
    RULE_value = 18
    RULE_typeName = 19
    RULE_binOp = 20
    RULE_unOp = 21

    ruleNames =  [ "program", "functionDecl", "block", "label", "instruction", 
                   "assignInstr", "binaryInstr", "unaryInstr", "branchInstr", 
                   "jumpInstr", "callInstr", "returnInstr", "arrayInstr", 
                   "fieldInstr", "printInstr", "tryInstr", "paramList", 
                   "argList", "value", "typeName", "binOp", "unOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    Identifier=53
    IntegerLiteral=54
    StringLiteral=55
    COMMENT=56
    WS=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TacParser.EOF, 0)

        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TacParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(TacParser.FunctionDeclContext,i)


        def getRuleIndex(self):
            return TacParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TacParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.functionDecl()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==TacParser.T__0):
                    break

            self.state = 49
            self.match(TacParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TacParser.Identifier, 0)

        def paramList(self):
            return self.getTypedRuleContext(TacParser.ParamListContext,0)


        def typeName(self):
            return self.getTypedRuleContext(TacParser.TypeNameContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TacParser.BlockContext)
            else:
                return self.getTypedRuleContext(TacParser.BlockContext,i)


        def getRuleIndex(self):
            return TacParser.RULE_functionDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = TacParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(TacParser.T__0)
            self.state = 52
            self.match(TacParser.Identifier)
            self.state = 53
            self.match(TacParser.T__1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TacParser.Identifier:
                self.state = 54
                self.paramList()


            self.state = 57
            self.match(TacParser.T__2)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TacParser.T__3:
                self.state = 58
                self.match(TacParser.T__3)
                self.state = 59
                self.typeName()


            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TacParser.T__6) | (1 << TacParser.T__7) | (1 << TacParser.T__8) | (1 << TacParser.T__9) | (1 << TacParser.T__11) | (1 << TacParser.T__15) | (1 << TacParser.T__16) | (1 << TacParser.T__17) | (1 << TacParser.T__18) | (1 << TacParser.T__19) | (1 << TacParser.T__20) | (1 << TacParser.Identifier))) != 0):
                self.state = 62
                self.block()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self):
            return self.getTypedRuleContext(TacParser.LabelContext,0)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TacParser.InstructionContext)
            else:
                return self.getTypedRuleContext(TacParser.InstructionContext,i)


        def getRuleIndex(self):
            return TacParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = TacParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 68
                self.label()


            self.state = 72 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 71
                    self.instruction()

                else:
                    raise NoViableAltException(self)
                self.state = 74 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TacParser.Identifier, 0)

        def getRuleIndex(self):
            return TacParser.RULE_label

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = TacParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(TacParser.Identifier)
            self.state = 77
            self.match(TacParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignInstr(self):
            return self.getTypedRuleContext(TacParser.AssignInstrContext,0)


        def binaryInstr(self):
            return self.getTypedRuleContext(TacParser.BinaryInstrContext,0)


        def unaryInstr(self):
            return self.getTypedRuleContext(TacParser.UnaryInstrContext,0)


        def branchInstr(self):
            return self.getTypedRuleContext(TacParser.BranchInstrContext,0)


        def jumpInstr(self):
            return self.getTypedRuleContext(TacParser.JumpInstrContext,0)


        def callInstr(self):
            return self.getTypedRuleContext(TacParser.CallInstrContext,0)


        def returnInstr(self):
            return self.getTypedRuleContext(TacParser.ReturnInstrContext,0)


        def arrayInstr(self):
            return self.getTypedRuleContext(TacParser.ArrayInstrContext,0)


        def fieldInstr(self):
            return self.getTypedRuleContext(TacParser.FieldInstrContext,0)


        def printInstr(self):
            return self.getTypedRuleContext(TacParser.PrintInstrContext,0)


        def tryInstr(self):
            return self.getTypedRuleContext(TacParser.TryInstrContext,0)


        def getRuleIndex(self):
            return TacParser.RULE_instruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = TacParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instruction)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.assignInstr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.binaryInstr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.unaryInstr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.branchInstr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.jumpInstr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.callInstr()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.returnInstr()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.arrayInstr()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 87
                self.fieldInstr()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 88
                self.printInstr()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 89
                self.tryInstr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignInstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TacParser.Identifier, 0)

        def value(self):
            return self.getTypedRuleContext(TacParser.ValueContext,0)


        def getRuleIndex(self):
            return TacParser.RULE_assignInstr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignInstr" ):
                return visitor.visitAssignInstr(self)
            else:
                return visitor.visitChildren(self)




    def assignInstr(self):

        localctx = TacParser.AssignInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignInstr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(TacParser.Identifier)
            self.state = 93
            self.match(TacParser.T__4)
            self.state = 94
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinaryInstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TacParser.Identifier, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TacParser.ValueContext)
            else:
                return self.getTypedRuleContext(TacParser.ValueContext,i)


        def binOp(self):
            return self.getTypedRuleContext(TacParser.BinOpContext,0)


        def getRuleIndex(self):
            return TacParser.RULE_binaryInstr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinaryInstr" ):
                return visitor.visitBinaryInstr(self)
            else:
                return visitor.visitChildren(self)




    def binaryInstr(self):

        localctx = TacParser.BinaryInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_binaryInstr)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(TacParser.Identifier)
                self.state = 97
                self.match(TacParser.T__4)
                self.state = 98
                self.value()
                self.state = 99
                self.binOp()
                self.state = 100
                self.value()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(TacParser.Identifier)
                self.state = 103
                self.match(TacParser.T__4)
                self.state = 104
                self.binOp()
                self.state = 105
                self.value()
                self.state = 106
                self.match(TacParser.T__5)
                self.state = 107
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryInstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TacParser.Identifier, 0)

        def unOp(self):
            return self.getTypedRuleContext(TacParser.UnOpContext,0)


        def value(self):
            return self.getTypedRuleContext(TacParser.ValueContext,0)


        def getRuleIndex(self):
            return TacParser.RULE_unaryInstr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryInstr" ):
                return visitor.visitUnaryInstr(self)
            else:
                return visitor.visitChildren(self)




    def unaryInstr(self):

        localctx = TacParser.UnaryInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_unaryInstr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(TacParser.Identifier)
            self.state = 112
            self.match(TacParser.T__4)
            self.state = 113
            self.unOp()
            self.state = 114
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BranchInstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(TacParser.ValueContext,0)


        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(TacParser.Identifier)
            else:
                return self.getToken(TacParser.Identifier, i)

        def getRuleIndex(self):
            return TacParser.RULE_branchInstr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBranchInstr" ):
                return visitor.visitBranchInstr(self)
            else:
                return visitor.visitChildren(self)




    def branchInstr(self):

        localctx = TacParser.BranchInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_branchInstr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(TacParser.T__6)
            self.state = 117
            self.value()
            self.state = 118
            self.match(TacParser.T__5)
            self.state = 119
            self.match(TacParser.Identifier)
            self.state = 120
            self.match(TacParser.T__5)
            self.state = 121
            self.match(TacParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JumpInstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TacParser.Identifier, 0)

        def getRuleIndex(self):
            return TacParser.RULE_jumpInstr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJumpInstr" ):
                return visitor.visitJumpInstr(self)
            else:
                return visitor.visitChildren(self)




    def jumpInstr(self):

        localctx = TacParser.JumpInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_jumpInstr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(TacParser.T__7)
            self.state = 124
            self.match(TacParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallInstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(TacParser.Identifier)
            else:
                return self.getToken(TacParser.Identifier, i)

        def argList(self):
            return self.getTypedRuleContext(TacParser.ArgListContext,0)


        def getRuleIndex(self):
            return TacParser.RULE_callInstr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallInstr" ):
                return visitor.visitCallInstr(self)
            else:
                return visitor.visitChildren(self)




    def callInstr(self):

        localctx = TacParser.CallInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_callInstr)
        self._la = 0 # Token type
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TacParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(TacParser.Identifier)
                self.state = 127
                self.match(TacParser.T__4)
                self.state = 128
                self.match(TacParser.T__8)
                self.state = 129
                self.match(TacParser.Identifier)
                self.state = 130
                self.match(TacParser.T__1)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TacParser.T__21) | (1 << TacParser.T__22) | (1 << TacParser.T__23) | (1 << TacParser.Identifier) | (1 << TacParser.IntegerLiteral) | (1 << TacParser.StringLiteral))) != 0):
                    self.state = 131
                    self.argList()


                self.state = 134
                self.match(TacParser.T__2)
                pass
            elif token in [TacParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(TacParser.T__8)
                self.state = 136
                self.match(TacParser.Identifier)
                self.state = 137
                self.match(TacParser.T__1)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TacParser.T__21) | (1 << TacParser.T__22) | (1 << TacParser.T__23) | (1 << TacParser.Identifier) | (1 << TacParser.IntegerLiteral) | (1 << TacParser.StringLiteral))) != 0):
                    self.state = 138
                    self.argList()


                self.state = 141
                self.match(TacParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnInstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(TacParser.ValueContext,0)


        def getRuleIndex(self):
            return TacParser.RULE_returnInstr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnInstr" ):
                return visitor.visitReturnInstr(self)
            else:
                return visitor.visitChildren(self)




    def returnInstr(self):

        localctx = TacParser.ReturnInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_returnInstr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(TacParser.T__9)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 145
                self.value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayInstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(TacParser.Identifier)
            else:
                return self.getToken(TacParser.Identifier, i)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TacParser.ValueContext)
            else:
                return self.getTypedRuleContext(TacParser.ValueContext,i)


        def getRuleIndex(self):
            return TacParser.RULE_arrayInstr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayInstr" ):
                return visitor.visitArrayInstr(self)
            else:
                return visitor.visitChildren(self)




    def arrayInstr(self):

        localctx = TacParser.ArrayInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arrayInstr)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(TacParser.Identifier)
                self.state = 149
                self.match(TacParser.T__4)
                self.state = 150
                self.match(TacParser.T__10)
                self.state = 151
                self.value()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(TacParser.T__11)
                self.state = 153
                self.match(TacParser.Identifier)
                self.state = 154
                self.match(TacParser.T__5)
                self.state = 155
                self.value()
                self.state = 156
                self.match(TacParser.T__5)
                self.state = 157
                self.value()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 159
                self.match(TacParser.Identifier)
                self.state = 160
                self.match(TacParser.T__4)
                self.state = 161
                self.match(TacParser.T__12)
                self.state = 162
                self.match(TacParser.Identifier)
                self.state = 163
                self.match(TacParser.T__5)
                self.state = 164
                self.value()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 165
                self.match(TacParser.Identifier)
                self.state = 166
                self.match(TacParser.T__4)
                self.state = 167
                self.match(TacParser.T__13)
                self.state = 168
                self.match(TacParser.Identifier)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldInstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(TacParser.Identifier)
            else:
                return self.getToken(TacParser.Identifier, i)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TacParser.ValueContext)
            else:
                return self.getTypedRuleContext(TacParser.ValueContext,i)


        def getRuleIndex(self):
            return TacParser.RULE_fieldInstr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldInstr" ):
                return visitor.visitFieldInstr(self)
            else:
                return visitor.visitChildren(self)




    def fieldInstr(self):

        localctx = TacParser.FieldInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_fieldInstr)
        try:
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TacParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(TacParser.Identifier)
                self.state = 172
                self.match(TacParser.T__4)
                self.state = 173
                self.match(TacParser.T__14)
                self.state = 174
                self.match(TacParser.Identifier)
                self.state = 175
                self.match(TacParser.T__5)
                self.state = 176
                self.value()
                pass
            elif token in [TacParser.T__15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.match(TacParser.T__15)
                self.state = 178
                self.match(TacParser.Identifier)
                self.state = 179
                self.match(TacParser.T__5)
                self.state = 180
                self.value()
                self.state = 181
                self.match(TacParser.T__5)
                self.state = 182
                self.value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintInstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(TacParser.ValueContext,0)


        def getRuleIndex(self):
            return TacParser.RULE_printInstr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintInstr" ):
                return visitor.visitPrintInstr(self)
            else:
                return visitor.visitChildren(self)




    def printInstr(self):

        localctx = TacParser.PrintInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_printInstr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(TacParser.T__16)
            self.state = 187
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TryInstrContext(ParserRuleContext):
        __slots__ = 'parser'
